@@ -1,5 +1,9 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0043 :
+* Added wine bottle offsets.
+* Added new Game Effects.
+
 A21.2.001.0042 :
 * Fixed dance game event.
 * Removed spawns for jump scare game event.
